# claude_code_buddy_adapter

./: .gitignore  .gitlab-ci.yml  .gitmodules  HOOK_DEBUG_REPORT.md  README.md  environment.yml  pyproject.toml  run.py
.github/workflows/: release.yml
claude_code_buddy_adapter/: __init__.py  cli.py  config.py  install_claude.py  logging_setup.py  metrics.py
claude_code_buddy_adapter/claude/: event_model.py  normalizer.py  reducer.py  textutil.py
claude_code_buddy_adapter/device/: alert.py  bridge.py  discovery.py  fake_transport.py  protocol.py  transport.py
claude_code_buddy_adapter/receiver/: http_server.py
claude_code_buddy_adapter/session/: arbiter.py  snapshot.py  store.py
debug/: capture_payloads.py  soak.py
scripts/: build.sh
tests/: conftest.py  test_alert.py  test_arbiter.py  test_cli.py  test_cli_integration.py  test_config.py  test_discovery.py  test_http_receiver.py  test_install_claude.py  test_logging.py  test_metrics.py  test_normalizer.py  test_normalizer_real.py  test_protocol.py  test_reducer.py  test_serial_transport.py  test_smoke.py  test_snapshot.py  test_store.py
tests/fixtures/: hook_notification.json  hook_pretooluse.json  hook_session_start.json  hook_stop.json  statusline_basic.json
tests/fixtures/real/: README.md  hook_elicitation.json  hook_elicitation_result.json  hook_message_display.json  hook_notification.json  hook_permission_request.json  hook_post_tool_use.json  hook_pre_tool_use.json  hook_session_end.json  hook_session_start.json  hook_stop.json  hook_stop_failure.json  hook_subagent_start.json  (+3 more)
