[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-code-buddy-adapter"
version = "0.1.3"
description = "Claude Code Buddy 桌宠 adapter：聚合 Claude Code 事件并驱动 StickS3 设备显示"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "shi" }]
dependencies = [
    "pyserial>=3.5",
    "fastapi>=0.110",
    "uvicorn>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.25",
]
# Nuitka 打包用：./scripts/build.sh 前置安装（pip install -e ".[build]"）
build = [
    "nuitka>=2.4",
    "zstandard>=0.22",
    "sniffio>=1.3",   # anyio 惰性 import；build.sh --include-package=sniffio 需 build 环境已装
]

[project.scripts]
buddy-adapter = "claude_code_buddy_adapter.cli:main"

[tool.setuptools.packages.find]
include = ["claude_code_buddy_adapter*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
